done with login forms

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,8 +9,14 @@
   </head>
 
   <body>
+
     <%= render "partials/header" %>
-    <%= yield %>
-    <%= render "partials/flash" %>
+    <div class="container">
+      <%= yield %>
+      <br>
+      <br>
+      <%= render "partials/flash" %>
+
+    </div>
   </body>
 </html>
