--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,38 +1,42 @@
-<h2>Edit Profile</h2>
-<%= form_for @user, url: profile_path, method: :patch do |f| %>
-  <% if @user.errors.any? %>
-    <div id="error_explanation">
-      <h3><%= pluralize(@user.errors.count, "error") %> prohibited this blog from being saved:</h3>
 
-      <ul>
-      <% @user.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+<div class="container">
+  <h2>Edit Profile</h2>
+    <%= form_for @user, url: profile_path, method: :patch do |f| %>
+      <% if @user.errors.any? %>
+        <div id="error_explanation">
+          <h3><%= pluralize(@user.errors.count, "error") %> prohibited this blog from being saved:</h3>
+
+          <ul>
+          <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
-
-  <div class="field">
-    <%= f.label :first_name %>
-    <%= f.text_field :first_name, :required => true %>
-  </div>
-    <div class="field">
-      <%= f.label :family_name %>
-      <%= f.text_field :family_name, :required => true %>
-    </div>
-  <div class="field">
-    <%= f.label :email %>
-    <%= f.email_field :email, :required => true %>
-  </div>
-  <div class="field">
-    <%= f.label :password %>
-    <%= f.password_field :password %>
-  </div>
-  <div class="field">
-    <%= f.label :password_confirmation %>
-    <%= f.password_field :password_confirmation %>
-  </div>
-  <div class="actions">
-    <%= f.submit "Update" %>
-  </div>
-<% end %>
+      <div class="row">
+        <div class="six columns">
+          <%= f.label :first_name %>
+          <%= f.text_field :first_name, :required => true %>
+        </div>
+        <div class="six columns">
+          <%= f.label :family_name %>
+          <%= f.text_field :family_name, :required => true %>
+        </div>
+      </div>
+      <div class="twelve columns">
+        <%= f.label :email %>
+        <%= f.email_field :email, :required => true %>
+      </div>
+      <div class="twelve columns">
+        <%= f.label :password %>
+        <%= f.password_field :password %>
+      </div>
+      <div class="twelve columns">
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation %>
+      </div>
+      <div class="twelve columns">
+        <%= f.submit "Update" %>
+      </div>
+    <% end %>
+</div>
