--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -1,5 +1,10 @@
 <div class="container">
-  <h1>Set a new goal</h1>
+  <div class="container">
+    <div class="container">
+      <h1>Set a new goal</h1>
+
+    </div>
+  </div>
 </div>
 
 <%= render 'form', goal: @goal %>
