--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -16,16 +16,16 @@
       <div class="row">
         <div class="six columns">
           <%= f.label :first_name %>
-          <%= f.text_field :first_name, :required => true %>
+          <%= f.text_field :first_name, :required => true, class: "u-full-width" %>
         </div>
         <div class="six columns">
           <%= f.label :family_name %>
-          <%= f.text_field :family_name, :required => true %>
+          <%= f.text_field :family_name, :required => true, class: "u-full-width" %>
         </div>
       </div>
       <div class="twelve columns">
         <%= f.label :email %>
-        <%= f.email_field :email, :required => true %>
+        <%= f.email_field :email, :required => true, class: "u-full-width"%>
       </div>
       <div class="twelve columns">
         <%= f.label :password %>
