--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,45 +1,41 @@
-<div class="container">
-  <div class="container">
-    <div class="container">
-      <div class="twelve columns" style="margin-top: 50px;">
-        <h2>Register</h2>
-        <%= form_for @user, url: register_path do |f| %>
-          <% if @user.errors.any? %>
-            <div id="error_explanation">
-              <h3><%= pluralize(@user.errors.count, "error") %> prohibited this blog from being saved:</h3>
+<div class="row">
+  <div class="six columns offset-by-three" style="margin-top: 50px;">
+    <h2>Register</h2>
+    <%= form_for @user, url: register_path do |f| %>
+      <% if @user.errors.any? %>
+        <div id="error_explanation">
+          <h3><%= pluralize(@user.errors.count, "error") %> prohibited this blog from being saved:</h3>
 
-              <ul>
-              <% @user.errors.full_messages.each do |message| %>
-                <li><%= message %></li>
-              <% end %>
-              </ul>
-            </div>
+          <ul>
+          <% @user.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
           <% end %>
-          <div class="field">
-            <%= f.label :first_name %>
-            <%= f.text_field :first_name, :required => true, class: "u-full-width" %>
-          </div>
-            <div class="field">
-              <%= f.label :family_name %>
-              <%= f.text_field :family_name, :required => true, class: "u-full-width" %>
-            </div>
-          <div class="field">
-            <%= f.label :email %>
-            <%= f.email_field :email, :required => true, class: "u-full-width" %>
-          </div>
-          <div class="field">
-            <%= f.label :password %>
-            <%= f.password_field :password, :required => true %>
-          </div>
-          <div class="field">
-            <%= f.label :password_confirmation %>
-            <%= f.password_field :password_confirmation, :required => true %>
-          </div>
-          <div class="actions">
-            <%= f.submit "Register" %>
-          </div>
-        <% end %>
+          </ul>
+        </div>
+      <% end %>
+      <div class="field">
+        <%= f.label :first_name %>
+        <%= f.text_field :first_name, :required => true, class: "u-full-width" %>
       </div>
-    </div>
+        <div class="field">
+          <%= f.label :family_name %>
+          <%= f.text_field :family_name, :required => true, class: "u-full-width" %>
+        </div>
+      <div class="field">
+        <%= f.label :email %>
+        <%= f.email_field :email, :required => true, class: "u-full-width" %>
+      </div>
+      <div class="field">
+        <%= f.label :password %>
+        <%= f.password_field :password, :required => true %>
+      </div>
+      <div class="field">
+        <%= f.label :password_confirmation %>
+        <%= f.password_field :password_confirmation, :required => true %>
+      </div>
+      <div class="actions">
+        <%= f.submit "Register" %>
+      </div>
+    <% end %>
   </div>
 </div>
