--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -1,42 +1,23 @@
-
-<h1>Goals</h1>
-
-<table>
-  <thead>
-    <tr>
-      <th>Title</th>
-      <th>Description</th>
-      <th>Beneficiary</th>
-      <th>User</th>
-      <th>Target amount</th>
-      <th>Penalty amount</th>
-      <th>Deadline</th>
-      <th>Pledged amount to date</th>
-      <th>Pledge target met?</th>
-      <th>Goal completed?</th>
-      <th colspan="3"></th>
-    </tr>
-  </thead>
-
-  <tbody>
+  <h1>Goals</h1>
+    <div class="row">
     <% @goals.each do |goal| %>
-      <tr>
-        <td><%= goal.title %></td>
-        <td><%= goal.description %></td>
-        <td><%= goal.beneficiary.name %></td>
-        <td><%= goal.user.name %></td>
-        <td><%= goal.target_amount %></td>
-        <td><%= goal.penalty_amount %></td>
-        <td><%= goal.deadline %></td>
-        <td><%= goal.total_pledged_amount %></td>
-        <td><%= goal.is_goal_validated %></td>
-        <td><%= goal.is_goal_completed %></td>
-        <td><%= link_to 'Pledge', goal %></td>
-      </tr>
+      <div class="one-third column" style="border: solid 0.5px #555; border-radius:10px;padding: 20px;">
+        <h3><%= goal.title %></h3>
+        <p><%= goal.description %></p>
+        <p><%= goal.beneficiary.name %></p>
+        <p><%= goal.user.name %></p>
+        <p>$<%= goal.target_amount %></p>
+        <p>$<%= goal.penalty_amount %></p>
+        <p><%= goal.deadline %></p>
+        <p><%= goal.total_pledged_amount %></p>
+        <p><%= goal.is_goal_validated %></p>
+        <p><%= goal.is_goal_completed %></p>
+        <p><%= button_to 'Pledge', goal, :method => :get, class: "hvr-bounce-to-right" %></p>
+      </div>
     <% end %>
-  </tbody>
-</table>
+    </div>
 
-<br>
+  <br>
 
-<%= link_to 'Book new goal', new_goal_path %>
+  <%= button_to 'Book new goal', new_goal_path, :method => :get, class:"hvr-bounce-to-right" %>
+<button class="hvr-bounce-to-right">hi</button>
