--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -1,10 +1,6 @@
-<div class="container">
-  <div class="container">
-    <div class="container">
+<div class="six columns offset-by-three">
       <h1>Set a new goal</h1>
-
-    </div>
-  </div>
 </div>
+
 
 <%= render 'form', goal: @goal %>
