--- a/app/views/goals/_form.html.erb
+++ b/app/views/goals/_form.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="six columns offset-by-three">
+  <div class="six columns offset-by-three space-top">
     <%= form_for(goal) do |f| %>
       <% if goal.errors.any? %>
         <div id="error_explanation">
