--- a/app/views/pledges/_form.html.erb
+++ b/app/views/pledges/_form.html.erb
@@ -1,30 +1,34 @@
-<%= form_for(pledge) do |f| %>
-  <% if pledge.errors.any? %>
-    <div id="error_explanation">
-      <h2><%= pluralize(pledge.errors.count, "error") %> prohibited this pledge from being saved:</h2>
+<div class="row">
+  <div class="six columns offset-by-three space-top">
+    <%= form_for(pledge) do |f| %>
+      <% if pledge.errors.any? %>
+        <div id="error_explanation">
+          <h2><%= pluralize(pledge.errors.count, "error") %> prohibited this pledge from being saved:</h2>
 
-      <ul>
-      <% pledge.errors.full_messages.each do |message| %>
-        <li><%= message %></li>
+          <ul>
+          <% pledge.errors.full_messages.each do |message| %>
+            <li><%= message %></li>
+          <% end %>
+          </ul>
+        </div>
       <% end %>
-      </ul>
-    </div>
-  <% end %>
 
-  <div class="field">
-    <%= f.label :contributed_amount %>
-    <%= f.text_field :contributed_amount, placeholder: "Pledge amount" %>
+      <div class="field">
+        <%= f.label :amount %>
+        <%= f.text_field :amount, placeholder: "Pledge amount", class: "u-full-width" %>
+      </div>
+
+
+      <div class="field">
+        <%= f.label :goal_id %>
+        <%= f.select :goal_id, goals.collect {|x| [x.title, x.id]}, class: "u-full-width" %>
+      </div>
+
+      <div class="actions">
+        <%= f.submit %>
+      </div>
+    <% end %>
+
+    <%= link_to 'Back', pledges_path %>
   </div>
-
-
-  <div class="field">
-    <%= f.label :goal_id %>
-    <%= f.select :goal_id, goals.collect {|x| [x.title, x.id]} %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit %>
-  </div>
-<% end %>
-
-<%= link_to 'Back', pledges_path %>
+</div>
