--- a/app/views/pledges/new.html.erb
+++ b/app/views/pledges/new.html.erb
@@ -1,3 +1,4 @@
-<h1>Pledge your support</h1>
-
+<div class="six columns offset-by-three">
+  <h1>Pledge your support</h1>
+</div>
 <%= render 'form', pledge: @pledge, goals: @goals %>
