--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,5 +1,5 @@
 <div class="row">
-  <div class="six columns offset-by-three" style="margin-top: 50px;">
+  <div class="six columns offset-by-three space-top">
     <h2>Register</h2>
     <%= form_for @user, url: register_path do |f| %>
       <% if @user.errors.any? %>
