--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -270,14 +270,34 @@ label.navbar, input[type=checkbox].navbar {
 }
 
 .project-byline {
-  font-size: 14px;
-  margin-bottom: 10px;
+  font-size: 12px;
+  margin-bottom: 20px;
   color: #3D3D66;
 }
 
 .project-content {
-  margin-bottom: 0;
-  font-size: 14px;
+  margin-bottom: 30px;
+  font-size: 12px;
   color: #3D3D66;
+}
 
+.project-content-extra {
+  margin-bottom: 10px;
+  font-size: 12px;
+  color: #3D3D66;
+}
+
+.project-footer {
+  margin-bottom: 0;
+  font-size: 12px;
+  color: #020621;
+  float: left;
+  margin-right: 10px;
+  list-style: none;
+}
+
+.project-footer-extra {
+  display: block;
+  color: #3D3D66;
+  font-size: 10px;
 }
