--- a/app/views/goals/index.html.erb
+++ b/app/views/goals/index.html.erb
@@ -22,7 +22,7 @@
         </ul>
         <ul class="twelve columns">
           <li class="project-footer">
-            <strong><%= goal.total_pledged_amount %></strong>
+            <strong>$<%= goal.pledges_total %></strong>
             <span class="project-footer-extra">Total pledged</span>
           </li>
         </ul>
