--- a/app/views/pledges/new.html.erb
+++ b/app/views/pledges/new.html.erb
@@ -1,4 +1,4 @@
 <div class="six columns offset-by-three">
   <h1>Pledge your support</h1>
 </div>
-<%= render 'form', pledge: @pledge, goals: @goals %>
+<%= render 'form', pledge: @pledge, goals: @goals, id: @id %>
