facebook share completed. CSS needs work

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -14,6 +14,18 @@
  *= require_self
  */
 
+ @import "social-share-button";
+
+ $size: 400px;
+
+ .social-share-button {
+   .ssb-icon {
+     background-size: $size $size;
+     height: $size;
+     width: $size;
+   }
+ }
+
 .nav-right {
   float: right; }
   .nav-right ul {
